<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="connection_method"
        android:title="@string/connection_method_title"
        android:entries="@array/connection_method_entries"
        android:entryValues="@array/connection_method_values"
        android:defaultValue="ble" />

    <ListPreference
        android:key="ui_theme"
        android:title="@string/ui_theme_title"
        android:entries="@array/ui_theme_entries"
        android:entryValues="@array/ui_theme_values"
        android:defaultValue="dark" />

    <SwitchPreferenceCompat
        android:key="mock_mode"
        android:title="@string/mock_mode_title"
        android:defaultValue="false" />

    <ListPreference
        android:key="mock_ble_status"
        android:title="@string/mock_ble_status_title"
        android:entries="@array/mock_status_entries"
        android:entryValues="@array/mock_status_values"
        android:defaultValue="Connected"
        android:dependency="mock_mode" />

    <ListPreference
        android:key="mock_serial_status"
        android:title="@string/mock_serial_status_title"
        android:entries="@array/mock_status_entries"
        android:entryValues="@array/mock_status_values"
        android:defaultValue="Idle"
        android:dependency="mock_mode" />

    <EditTextPreference
        android:key="mock_battery_level"
        android:title="@string/mock_battery_level_title"
        android:defaultValue="78"
        android:dependency="mock_mode" />

    <EditTextPreference
        android:key="ble_device_name"
        android:title="@string/ble_device_name_title"
        android:defaultValue="AkitaNode01" />

    <EditTextPreference
        android:key="serial_port_path"
        android:title="@string/serial_port_path_title"
        android:defaultValue="/dev/ttyUSB0" />

    <EditTextPreference
        android:key="serial_baud_rate"
        android:title="@string/serial_baud_rate_title"
        android:defaultValue="115200" />

    <Preference
        android:key="send_test_message"
        android:title="@string/send_test_message_title" />

</PreferenceScreen>
